# relocatifier

./: .gitignore  CONTEXT.md  README.md  Taskfile.yml  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: deploy.yml
app/: .gitignore  README.md  Taskfile.yml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  MapView.tsx  color.ts  layers.ts  main.tsx  metrics.ts  sales.ts  salesDots.ts  scraperClient.ts  search.ts  styles.css  types.ts  useArtifacts.ts  useSales.ts  (+2 more)
docs/: HANDOFF.md  PRD.md
etl/: .gitignore  README.md  Taskfile.yml  pyproject.toml
etl/src/relocatifier_etl/: __init__.py  build.py  cli.py  context.py  crosswalk.py  fetch.py  paths.py  sources.py  transform.py
etl/src/relocatifier_etl/source_modules/: __init__.py  abs_census.py  crime.py  house_prices.py  rents.py  schools.py
etl/tests/: test_crime.py  test_house_prices.py  test_rents.py  test_schools.py  test_transform.py
etl/tests/fixtures/house_prices/: oth_sitemap.xml  oth_suburb_page.html
scraper/: pyproject.toml
scraper/src/scraper/: __init__.py  api.py  config.py  export_cli.py  exporter.py  oth_client.py  oth_parser.py  oth_payload.py  price.py  reconciler.py  resolver.py  runs.py  sale_date.py  storage.py  vendor.py  watchlist.py
scraper/tests/: test_api.py  test_exporter.py  test_oth_client.py  test_parser.py  test_reconciler.py  test_resolver.py  test_runs.py  test_sale_date.py
scraper/tests/fixtures/: metrics.json  oth_recentlysold_fixture.json  oth_sitemap.xml  oth_spike_response.json
worker/: index.ts
(+16 files in other folders)
