[project]
name = "relocatifier-etl"
version = "0.1.0"
description = "Relocatifier batch ETL: fetch raw sources, normalise to SAL, emit static artifacts"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "typer>=0.12",
    "geopandas>=1.0",
    "pyarrow>=17.0",
    "openpyxl>=3.1.5",
]

[project.scripts]
etl = "relocatifier_etl.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relocatifier_etl"]
